pick image is working well

--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,7 @@
   <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>naya_menu</title>
+  <script src="https://cdn.jsdelivr.net/npm/pica@9.0.1/dist/pica.min.js"></script>
   <link rel="manifest" href="manifest.json">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.6.2/cropper.css" />
